--- a/Test .ipynb
+++ b/Test .ipynb
@@ -2,49 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ce29374d",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (4146108352.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\labor\\AppData\\Local\\Temp\\ipykernel_6292\\4146108352.py\"\u001b[1;36m, line \u001b[1;32m6\u001b[0m\n\u001b[1;33m    for tekst = input(\"Er bokstaven din X eller Y\"):\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = \"Det er bra\"\n",
-    "\n",
-    "y = \"Det var dumt\"\n",
-    "\n",
-    "\n",
-    "for tekst = input(\"Er bokstaven din X eller Y\"):\n",
-    "    if tekst == x:\n",
-    "        print (x)\n",
-    "    if tekst == y:\n",
-    "        print(y)\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
-   "id": "db551fc8",
+   "id": "986eacaf",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b90666a",
+   "metadata": {},
+   "source": [
+    "Impoting necessary pacages"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "91b0d3c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'StreamingHistory0.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_6292\\2399561923.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# Opening JSON file\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'StreamingHistory0.json'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# returns JSON object as\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'StreamingHistory0.json'"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "60fb7530",
+   "id": "34f30913",
    "metadata": {},
    "outputs": [],
    "source": []
